# NYC-Government-Hiring-Audit-Data-Platform

./: .gitignore  README.md  docker-compose.yml  prefect-entrypoint.sh  processed_jobs.csv  project_notes.md  project_report.md  pyproject.toml  setup.sh
alt_data/: jobs_to_lightcast_title_fuzzy_matches.parquet  lightcast_top_posted_occupations_SOC.parquet  nyc_job_postings_data.parquet
api/: fetch_data.py  main.py
logs/: application.log.1
sql/: cleaned.sql  datagrip_connector.sql  datagrip_validations.sql  staged.sql
src/: cleaned_data.py  data_ingestion.py  db_init.py  db_sync.py  fuzzy_flows.py  fuzzy_match_jobs_durations.py  fuzzy_match_jobs_durations_alt.py  fuzzy_match_salary.py  fuzzy_match_salary_alt.py  fuzzy_matching.py  fuzzy_matching_polars.py  fuzzy_title.py  main.py  utils.py
streamlit/: app.py
