[project]
name = "project-4-nyc-hiring-audit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.3.2",
    "fastapi[standard]>=0.116.1",
    "minio>=7.2.16",
    "numpy>=2.3.2",
    "polars>=1.32.3",
    "prefect>=3.4.12",
    "pytest>=8.4.1",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.4",
    "ruff>=0.12.9",
]
